Update link fb, ins, tw

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                       </div>
 
                       <div class="social-links">
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="https://twitter.com/QuanSmi67126678"><i class="fa fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/vanquan1999/"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/vanquan.dev/"><i class="fa fa-instagram"></i></a>
                       </div>
                     </div>
                   </div>
