--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -120,9 +120,9 @@
                 <div class="entry-meta entry-tags-share">
                   <!-- Share Buttons -->
                   <div class="btn-group share-buttons pull-right hidden-xs">
-                    <a href="#" target="_blank" class="btn"><i class="fa fa-facebook"></i> </a>
-                    <a href="#" target="_blank" class="btn"><i class="fa fa-twitter"></i> </a>
-                    <a href="#" target="_blank" class="btn"><i class="fa fa-dribbble"></i> </a>
+                    <a href="https://www.facebook.com/vanquan1999/" target="_blank" class="btn"><i class="fa fa-facebook"></i> </a>
+                    <a href="https://twitter.com/QuanSmi67126678" target="_blank" class="btn"><i class="fa fa-twitter"></i> </a>
+                    <a href="https://www.instagram.com/vanquan.dev/" target="_blank" class="btn"><i class="fa fa-dribbble"></i> </a>
                   </div>
                   <!-- /Share Buttons -->
                   <!-- <ul class="tags">
