--- a/portfolio-1.html
+++ b/portfolio-1.html
@@ -11,7 +11,7 @@
         </div>
 
         <div class="ajax-page-title">
-            <h1>Portfolio Project 1</h1>
+            <h1>Cửa Hàng Tạp Hóa</h1>
         </div>
 
         <div class="row">
@@ -29,7 +29,7 @@
                 </div>
 
                 <div class="portfolio-page-video embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/97102654?autoplay=0"></iframe>
+                  <iframe class="embed-responsive-item" src="https://vimeo.com/571937076?autoplay=0"></iframe>
                 </div>
 
                 <!--
@@ -62,11 +62,11 @@
                 </div>
                 <ul class="project-general-info">
                     <li><p><i class="fa fa-user"></i> Đinh Văn Quân</p></li>
-                    <li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p></li>
+                    <li><p><i class="fa fa-globe"></i> <a href="https://vanquan99.github.io/dinhvanquan-android" target="_blank">Goc-cua-quan</a></p></li>
                     <li><p><i class="fa fa-calendar"></i> 25 december, 2020</p></li>
                 </ul>
 
-                <p class="text-justify">Aliquam euismod aliquam massa, quis eleifend dui sodales vitae. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                <p class="text-justify">You can buy all your household needs including – Grocery, Vegetables, Fruits, Household items, Personal care products, Etc – with touch of your Smart Device. Why stand in line when you can get online so stay home and stay safe.</p>
                 <!-- /Project Description -->
 
                 <!-- Technology -->
@@ -75,11 +75,12 @@
                         <h3>Technology</h3>
                     </div>
                     <ul class="tags">
-                        <li><a>HTML5</a></li>
-                        <li><a>CSS3</a></li>
-                        <li><a>jQuery</a></li>
-                        <li><a>Ajax</a></li>
-                        <li><a>PHP5</a></li>
+                        
+                        <li><a>Java</a></li>
+                        <li><a>API</a></li>
+                        <li><a>Database</a></li>
+                        <li><a>MVC</a></li>
+                        <li><a>Firebase</a></li>
                     </ul>
                 </div>
                 <!-- /Technology -->
