--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <p>Hello! I’m Đinh Văn Quân. I am currently a final year student in information technology. I've always enjoyed exploring and learning. Whenever I'm in trouble, I find ways to solve that problem. I'm interested in programming especially android programming, so that's why I want to be a Android Developer.</p>
                       </div>
                       <div class="download-resume">
-                        <a href="" class="btn btn-secondary">Download Resume</a>
+                        <a href="https://drive.google.com/file/d/1WWS12ZRJvmwpZspJezLdlGH7loAqhFm2/view?usp=sharing" class="btn btn-secondary">Download Resume</a>
                       </div>
                     </div>
 
@@ -178,7 +178,7 @@
                             <span class="item-period">2017 - Current</span>
                             <!-- <span class="item-small">Apple Inc.</span> -->
                             <p class="item-description">Final year student majoring in Information Technology.</p>
-                            <p class="item-description">GPA: 3.2/4.0.</p>
+                            <p class="item-description">GPA: 3.12/4.0.</p>
                           </div>
                           <!-- / Education 1 -->
 
@@ -679,7 +679,7 @@
                         <a class="ajax-page-load" href="portfolio-1.html">
                           <img src="images/portfolio/1.jpg" alt="">
                           <div>
-                            <h5 class="name">Project Name</h5>
+                            <h5 class="name">CỬA HÀNG TẠP HÓA</h5>
                             <small>Media</small>
                             <i class="fa fa-file-text-o"></i>
                           </div>
@@ -713,122 +713,122 @@
                       </figure>
                       <!-- /Portfolio Item 3 -->
 
-                      <!-- Portfolio Item 4 -->
-                      <figure class="item" data-groups='["all", "media"]'>
-                        <a class="ajax-page-load" href="portfolio-2.html">
-                          <img src="images/portfolio/4.jpg" alt="">
-                          <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Media</small>
-                            <i class="fa fa-file-text-o"></i>
-                          </div>
-                        </a>
-                      </figure>
-                      <!-- /Portfolio Item 4 -->
+                  <!-- Portfolio Item 4 -->
+                  <!-- <figure class="item" data-groups='["all", "media"]'>
+                    <a class="ajax-page-load" href="portfolio-2.html">
+                      <img src="images/portfolio/4.jpg" alt="">
+                      <div>
+                        <h5 class="name">Project Name</h5>
+                        <small>Media</small>
+                        <i class="fa fa-file-text-o"></i>
+                      </div>
+                    </a>
+                  </figure> -->
+                  <!-- /Portfolio Item 4 -->
 
-                      <!-- Portfolio Item 5 -->
-                      <figure class="item" data-groups='["all", "illustration"]'>
-                        <a href="images/portfolio/full/5.jpg" class="lightbox" title="Aliquam Condimentum Magna Rhoncus">
-                          <img src="images/portfolio/5.jpg" alt="">
-                          <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Illustration</small>
-                            <i class="fa fa-image"></i>
-                          </div>
-                        </a>
-                      </figure>
-                      <!-- /Portfolio Item 5 -->
+                  <!-- Portfolio Item 5 -->
+                  <!-- <figure class="item" data-groups='["all", "illustration"]'>
+                    <a href="images/portfolio/full/5.jpg" class="lightbox" title="Aliquam Condimentum Magna Rhoncus">
+                      <img src="images/portfolio/5.jpg" alt="">
+                      <div>
+                        <h5 class="name">Project Name</h5>
+                        <small>Illustration</small>
+                        <i class="fa fa-image"></i>
+                      </div>
+                    </a>
+                  </figure> -->
+                  <!-- /Portfolio Item 5 -->
 
-                      <!-- Portfolio Item 6 -->
-                      <figure class="item" data-groups='["all", "media"]'>
-                        <a class="ajax-page-load" href="portfolio-3.html">
-                          <img src="images/portfolio/6.jpg" alt="">
-                          <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Media</small>
-                            <i class="fa fa-file-text-o"></i>
-                          </div>
-                        </a>
-                      </figure>
-                      <!-- /Portfolio Item 6 -->
+                  <!-- Portfolio Item 6 -->
+                  <!-- <figure class="item" data-groups='["all", "media"]'>
+                    <a class="ajax-page-load" href="portfolio-3.html">
+                      <img src="images/portfolio/6.jpg" alt="">
+                      <div>
+                        <h5 class="name">Project Name</h5>
+                        <small>Media</small>
+                        <i class="fa fa-file-text-o"></i>
+                      </div>
+                    </a>
+                  </figure> -->
+                  <!-- /Portfolio Item 6 -->
 
-                      <!-- Portfolio Item 7 -->
-                      <figure class="item" data-groups='["all", "video"]'>
-                        <a href="https://player.vimeo.com/video/97102654?autoplay=1" title="Nulla Facilisi" class="lightbox mfp-iframe">
-                          <img src="images/portfolio/7.jpg" alt="">
-                          <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Video</small>
-                            <i class="fa fa-video-camera"></i>
-                          </div>
-                        </a>
-                      </figure>
-                      <!-- /Portfolio Item 7 -->
+                  <!-- Portfolio Item 7 -->
+                  <!-- <figure class="item" data-groups='["all", "video"]'>
+                    <a href="https://player.vimeo.com/video/97102654?autoplay=1" title="Nulla Facilisi" class="lightbox mfp-iframe">
+                      <img src="images/portfolio/7.jpg" alt="">
+                      <div>
+                        <h5 class="name">Project Name</h5>
+                        <small>Video</small>
+                        <i class="fa fa-video-camera"></i>
+                      </div>
+                    </a>
+                  </figure> -->
+                  <!-- /Portfolio Item 7 -->
 
-                      <!-- Portfolio Item 8 -->
-                      <figure class="item" data-groups='["all",  "media"]'>
-                        <a class="ajax-page-load" href="portfolio-4.html">
-                          <img src="images/portfolio/8.jpg" alt="">
-                          <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Media</small>
-                            <i class="fa fa-file-text-o"></i>
-                          </div>
-                        </a>
-                      </figure>
-                      <!-- /Portfolio Item 8 -->
+                  <!-- Portfolio Item 8 -->
+                  <!-- <figure class="item" data-groups='["all",  "media"]'>
+                    <a class="ajax-page-load" href="portfolio-4.html">
+                      <img src="images/portfolio/8.jpg" alt="">
+                      <div>
+                        <h5 class="name">Project Name</h5>
+                        <small>Media</small>
+                        <i class="fa fa-file-text-o"></i>
+                      </div>
+                    </a>
+                  </figure> -->
+                  <!-- /Portfolio Item 8 -->
 
-                      <!-- Portfolio Item 9 -->
-                      <figure class="item" data-groups='["all","illustration"]'>
-                        <a href="images/portfolio/full/9.jpg" class="lightbox" title="Mauris Neque Dolor">
-                          <img src="images/portfolio/9.jpg" alt="">
-                          <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Illustration</small>
-                            <i class="fa fa-image"></i>
-                          </div>
-                        </a>
-                      </figure>
-                      <!-- /Portfolio Item 9 -->
+                  <!-- Portfolio Item 9 -->
+                  <!-- <figure class="item" data-groups='["all","illustration"]'>
+                    <a href="images/portfolio/full/9.jpg" class="lightbox" title="Mauris Neque Dolor">
+                      <img src="images/portfolio/9.jpg" alt="">
+                      <div>
+                        <h5 class="name">Project Name</h5>
+                        <small>Illustration</small>
+                        <i class="fa fa-image"></i>
+                      </div>
+                    </a>
+                  </figure> -->
+                  <!-- /Portfolio Item 9 -->
 
-                      <!-- Portfolio Item 10 -->
-                      <figure class="item" data-groups='["all", "video"]'>
-                        <a href="https://player.vimeo.com/video/97102654?autoplay=1" title="Donec Lectus Arcu" class="lightbox mfp-iframe">
-                          <img src="images/portfolio/10.jpg" alt="">
-                          <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Video</small>
-                            <i class="fa fa-video-camera"></i>
-                          </div>
-                        </a>
-                      </figure>
-                      <!-- /Portfolio Item 10 -->
+                  <!-- Portfolio Item 10 -->
+                  <!-- <figure class="item" data-groups='["all", "video"]'>
+                    <a href="https://player.vimeo.com/video/97102654?autoplay=1" title="Donec Lectus Arcu" class="lightbox mfp-iframe">
+                      <img src="images/portfolio/10.jpg" alt="">
+                      <div>
+                        <h5 class="name">Project Name</h5>
+                        <small>Video</small>
+                        <i class="fa fa-video-camera"></i>
+                      </div>
+                    </a>
+                  </figure> -->
+                  <!-- /Portfolio Item 10 -->
 
-                      <!-- Portfolio Item 11 -->
-                      <figure class="item" data-groups='["all","illustration"]'>
-                        <a href="images/portfolio/full/11.jpg" class="lightbox" title="Duis Eu Eros Viverra">
-                          <img src="images/portfolio/11.jpg" alt="">
-                          <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Illustration</small>
-                            <i class="fa fa-image"></i>
-                          </div>
-                        </a>
-                      </figure>
-                      <!-- /Portfolio Item 11 -->
+                  <!-- Portfolio Item 11 -->
+                  <!-- <figure class="item" data-groups='["all","illustration"]'>
+                    <a href="images/portfolio/full/11.jpg" class="lightbox" title="Duis Eu Eros Viverra">
+                      <img src="images/portfolio/11.jpg" alt="">
+                      <div>
+                        <h5 class="name">Project Name</h5>
+                        <small>Illustration</small>
+                        <i class="fa fa-image"></i>
+                      </div>
+                    </a>
+                  </figure> -->
+                  <!-- /Portfolio Item 11 -->
 
-                      <!-- Portfolio Item 12 -->
-                      <figure class="item" data-groups='["all","media"]'>
-                        <a class="ajax-page-load" href="portfolio-5.html">
-                          <img src="images/portfolio/12.jpg" alt="">
-                          <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Media</small>
-                            <i class="fa fa-file-text-o"></i>
-                          </div>
-                        </a>
-                      </figure>
-                      <!-- /Portfolio Item 12 -->
+                  <!-- Portfolio Item 12 -->
+                  <!-- <figure class="item" data-groups='["all","media"]'>
+                    <a class="ajax-page-load" href="portfolio-5.html">
+                      <img src="images/portfolio/12.jpg" alt="">
+                      <div>
+                        <h5 class="name">Project Name</h5>
+                        <small>Media</small>
+                        <i class="fa fa-file-text-o"></i>
+                      </div>
+                    </a>
+                  </figure> -->
+
                     </div>
                     <!-- /Portfolio Grid -->
 
