--- a/portfolio-4.html
+++ b/portfolio-4.html
@@ -29,7 +29,7 @@
                 </div>
 
                 <div class="portfolio-page-video embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/97102654?autoplay=0"></iframe>
+                  <iframe class="embed-responsive-item" src="https://vimeo.com/571937076?autoplay=0"></iframe>
                 </div>
 
                 <!--
@@ -63,7 +63,7 @@
                 <ul class="project-general-info">
                     <li><p><i class="fa fa-user"></i> Đinh Văn Quân</p></li>
                     <li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p></li>
-                    <li><p><i class="fa fa-calendar"></i> 25 december, 2016</p></li>
+                    <li><p><i class="fa fa-calendar"></i> 25 december, 2020</p></li>
                 </ul>
 
                 <p class="text-justify">Aliquam euismod aliquam massa, quis eleifend dui sodales vitae. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
@@ -75,11 +75,11 @@
                         <h3>Technology</h3>
                     </div>
                     <ul class="tags">
-                        <li><a>HTML5</a></li>
+                        <!-- <li><a>HTML5</a></li>
                         <li><a>CSS3</a></li>
                         <li><a>jQuery</a></li>
                         <li><a>Ajax</a></li>
-                        <li><a>PHP5</a></li>
+                        <li><a>PHP5</a></li> -->
                     </ul>
                 </div>
                 <!-- /Technology -->
