--- a/portfolio-1.html
+++ b/portfolio-1.html
@@ -20,16 +20,16 @@
                     <div class="item">
                         <img src="images/portfolio/full/1.jpg" alt="" />
                     </div>
-                    <div class="item">
+                    <!-- <div class="item">
                         <img src="images/portfolio/full/2.jpg" alt="" />
                     </div>
                     <div class="item">
                         <img src="images/portfolio/full/3.jpg" alt="" />
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="portfolio-page-video embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="https://vimeo.com/571937076?autoplay=0"></iframe>
+                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/571937076?autoplay=0"></iframe>
                 </div>
 
                 <!--
