--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -29,7 +29,7 @@
                 </div>
 
                 <div class="portfolio-page-video embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="https://vimeo.com/571937076?autoplay=0"></iframe>
+                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/571937076?autoplay=0"></iframe>
                 </div>
 
                 <!--
