--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                     <div class="col-sm-12 col-md-12 col-lg-12">
                       <div class="block">
                         <div class="center download-resume">
-                          <a href="#" class="btn btn-secondary">Download Resume</a>
+                          <a href="https://drive.google.com/file/d/1WWS12ZRJvmwpZspJezLdlGH7loAqhFm2/view?usp=sharing" class="btn btn-secondary">Download Resume</a>
                         </div>
                       </div>
                     </div>
@@ -689,7 +689,7 @@
 
                       <!-- Portfolio Item 2 -->
                       <figure class="item" data-groups='["all", "video"]'>
-                        <a href="https://player.vimeo.com/video/97102654?autoplay=1" title="Praesent Dolor Ex" class="lightbox mfp-iframe">
+                        <a href="https://player.vimeo.com/video/571937076?autoplay=1" title="Praesent Dolor Ex" class="lightbox mfp-iframe">
                           <img src="images/portfolio/2.jpg" alt="">
                           <div>
                             <h5 class="name">Project Name</h5>
