--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -121,8 +121,8 @@
                   <!-- Share Buttons -->
                   <div class="btn-group share-buttons pull-right hidden-xs">
                     <a href="https://www.facebook.com/vanquan1999/" target="_blank" class="btn"><i class="fa fa-facebook"></i> </a>
-                    <a href="https://twitter.com/QuanSmi67126678" target="_blank" class="btn"><i class="fa fa-twitter"></i> </a>
-                    <a href="https://www.instagram.com/vanquan.dev/" target="_blank" class="btn"><i class="fa fa-dribbble"></i> </a>
+                    <a href="https://twitter.com/vanquandev" target="_blank" class="btn"><i class="fa fa-twitter"></i> </a>
+                    <a href="https://www.instagram.com/vanquan.99/" target="_blank" class="btn"><i class="fa fa-dribbble"></i> </a>
                   </div>
                   <!-- /Share Buttons -->
                   <!-- <ul class="tags">
